ebikes-lwc-master/force-app/main/default/objects/Loan_Application__c/fields/Loan_Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Enquiry_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Enquiry Number</label>
    <referenceTo>Loan_Offer__c</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>