ebikes-lwc-master/force-app/main/default/objects/Loan_Application__c/fields/Loan_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure__c</fullName>
    <label>Loan Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>