ebikes-lwc-master/force-app/main/default/objects/Loan_Application__c/fields/Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check Off</fullName>
            </value>
            <value>
                <fullName>ECS</fullName>
            </value>
            <value>
                <fullName>Post Dated Cheque</fullName>
            </value>
            <value>
                <fullName>Standing Instruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>